feat: update popup layout with new back button and calculator icon

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -7,14 +7,26 @@
       <button class="button" id="settingButton">
         <img src="../images/gear.svg" alt="icon" />
       </button>
+
       <input type="date" id="datePicker" />
+
       <button class="button" id="calcButton">
-        <img src="../images/lightbulb-off.svg" alt="icon" />
+        <img src="../images/calculator.svg" alt="icon" />
       </button>
+
+      <label class="infoLabel" id="result_1">XX님은 이 때</label>
+
+      <label class="infoLabel" id="result_2">만 XX살, XX학교 X학년</label>
+
+      <label class="infoLabel" id="result_3">이였어요</label>
     </div>
 
     <div id="setting">
+      <button class="button" id="backButton">
+        <img src="../images/back-arrow.svg" alt="icon" />
+      </button>
 
+      <input type="date" id="datePicker" />
     </div>
   </body>
 </html>
