--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -14,11 +14,11 @@
         <img src="../images/calculator.svg" alt="icon" />
       </button>
 
-      <label class="infoLabel" id="result_1">XX님은 이 때</label>
+      <label class="infoLabel" id="resultLabel1">XX님은 이 때</label>
 
-      <label class="infoLabel" id="result_2">만 XX살, XX학교 X학년</label>
+      <label class="infoLabel" id="resultLabel2">만 XX살, XX학교 X학년</label>
 
-      <label class="infoLabel" id="result_3">이였어요</label>
+      <label class="infoLabel" id="resultLabel3">이였어요</label>
     </div>
 
     <div id="setting">
@@ -26,7 +26,9 @@
         <img src="../images/back-arrow.svg" alt="icon" />
       </button>
 
-      <input type="date" id="datePicker" />
+      <label class="infoLabel" id="inputAgeLabel">생일을 입력해 주세요</label>
+
+      <input type="date" id="agePicker" />
     </div>
   </body>
 </html>
