fix: update script source in popup.html to use bundled JavaScript file

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="popup.css" />
 <html>
   <meta charset="UTF-8" />
-  <script type="module" src="popup.js"></script>
+  <script type="module" src="../dist/popup.bundle.js"></script>
   <body>
     <div id="main">
       <button class="button" id="settingButton">
