fix: replace date input with number input for exam duration in popup.html

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -30,14 +30,14 @@
       <input type="date" id="birthPicker" />
 
       <label class="settingLabel" id="examLabel">재수 기간</label>
-      <input type="date" id="examPicker" />
+      <input type="number" id="examInput" />
 
       <label class="settingLabel" id="armyLabel">입영일</label>
       <input type="date" id="armyPicker" />
 
       <label class="settingLabel" id="fastLabel">빠른 년생</label>
       <label class="switch">
-        <input checked="" type="checkbox" />
+        <input checked="" type="checkbox" id="fastCheckBox" />
         <div class="slider">
           <div class="circle">
             <svg
