feat: clear default messages in popup for improved user experience

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -16,7 +16,7 @@
 
       <label class="infoLabel" id="resultLabel1"></label>
 
-      <label class="infoLabel" id="resultLabel2">설정을 완료해 주세요</label>
+      <label class="infoLabel" id="resultLabel2"></label>
 
       <label class="infoLabel" id="resultLabel3"></label>
     </div>
