feat: rename date picker input IDs for clarity and consistency

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,7 +8,7 @@
         <img src="../images/gear.svg" alt="icon" />
       </button>
 
-      <input type="date" id="datePicker" />
+      <input type="date" id="targetDatePicker" class="datePicker" />
 
       <button class="button" id="calcButton">
         <img src="../images/calculator.svg" alt="icon" />
@@ -27,13 +27,13 @@
       </button>
 
       <label class="settingLabel" id="birthLabel">생일</label>
-      <input type="date" id="birthPicker" />
+      <input type="date" id="birthPicker" class="datePicker" />
 
       <label class="settingLabel" id="examLabel">재수 기간</label>
       <input type="number" id="examInput" />
 
       <label class="settingLabel" id="armyLabel">입영일</label>
-      <input type="date" id="armyPicker" />
+      <input type="date" id="armyPicker" class="datePicker" />
 
       <label class="settingLabel" id="fastLabel">빠른 년생</label>
       <label class="switch">
